# ExAndroidNativeEmu

./: README.md  example_bb.py  example_douyin.py  example_douyin8.py  example_jni.py  example_jni_onload.py  example_sgmain.py  pyproject.toml  requirements.txt
androidemu/: config.py  emulator.py  hooker.py  native_hook_utils.py  pcb.py  scheduler.py
androidemu/const/: emu_const.py  map_reg.py  map_syscall.py
androidemu/cpu/: interrupt_handler.py  syscall_handler.py  syscall_handlers.py  syscall_hooks.py
androidemu/internal/: arm.py  elf_reader.py  module.py  modules.py
androidemu/java/: java_class_def.py  java_classloader.py  java_field_def.py  java_method_def.py  java_vm.py  jni_env.py  jni_ref.py  jvm_id_conter.py  reference_table.py
androidemu/java/classes/: activity_thread.py  application.py  array.py  asset_manager.py  bundle.py  clazz.py  constructor.py  contentresolver.py  context.py  debug.py  dexfile.py  environment.py  executable.py  field.py  file.py  intent.py  java_set.py  list.py  map.py  method.py  network_interface.py  object.py  okhttp.py  package_manager.py  proxy.py  settings.py  share_preference.py  string.py  system.py  types.py  uri.py  wifi.py
androidemu/native/: asset_mgr_hooks.py  memory.py  memory_map.py  memory_syscall_handler.py  symbol_hooks.py
androidemu/utils/: chain_log.py  debug_utils.py  mem_monitor.py  memory_helpers.py  misc_utils.py  stack_helpers.py
androidemu/vfs/: file_helpers.py  file_system.py
tests/: test_elf.py  test_native.py  test_thread.py
tools/: gen_jni_env.py
(+1 files in other folders)
